✨ Add publishConfig to package.json for public access on npm

--- a/package.json
+++ b/package.json
@@ -95,6 +95,10 @@
   "bugs": {
     "url": "https://github.com/bquery/bquery/issues"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "engines": {
     "node": ">=18.0.0"
   },
