--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: "1.3.6"
-      - run: bun install
+      - run: bun install --frozen-lockfile
       - run: bun test
       - run: bun run build
 
@@ -26,7 +26,7 @@ jobs:
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: "1.3.6"
-      - run: bun install
+      - run: bun install --frozen-lockfile
       - run: bun run build:docs
         env:
           VITEPRESS_BASE: /bquery/
@@ -46,11 +46,10 @@ jobs:
         with:
           bun-version: "1.3.6"
 
-      - run: bun install
+      - run: bun install --frozen-lockfile
       - run: bun run build
-      - run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - name: Publish to npm (Trusted Publisher)
+        run: npm publish --access public --provenance
 
   deploy-pages:
     needs: build-docs
