--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,6 +6,9 @@ name: Publish to npm
 on:
   release:
     types: [created]
+  push:
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -35,6 +38,7 @@ jobs:
           path: docs/.vitepress/dist
 
   publish-npm:
+    if: github.event_name == 'release'
     needs: build
     runs-on: ubuntu-latest
     permissions:
@@ -52,6 +56,7 @@ jobs:
         run: npm publish --access public --provenance
 
   deploy-pages:
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     needs: build-docs
     runs-on: ubuntu-latest
     permissions:
