--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.3.6'
+          bun-version: "1.3.7"
       - run: bun install --frozen-lockfile
       - run: bun test
       - run: bun run build
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.3.6'
+          bun-version: "1.3.7"
       - run: bun install --frozen-lockfile
       - run: bun run build:docs
       - uses: actions/upload-pages-artifact@v3
@@ -50,7 +50,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.3.6'
+          bun-version: "1.3.7"
 
       - run: bun install --frozen-lockfile
       - run: bun run build
